src/article/styles/right-column.scss
@use '../../sass/buttons';
@use '../../sass/settings';
@use '../../sass/typography';

@mixin _right-column-section() {
  border-bottom: settings.$border;
  margin-top: 36px;
  padding-bottom: 36px;

  @media only all and (min-width: 730px) {
    margin-left: auto;
    margin-right: auto;
    max-width: 230px;
  }
}

.sticky-column {
  position: sticky;
  top: 151px; // magic number (distance between top of window and top of right column)
}

.article-status {
  @include _right-column-section();
  margin-top: 48px;

  @media only all and (min-width: 730px) {
    margin-top: 0;
  }
}

.article-status__heading {
  font-family: settings.$font-family-primary;
  font-size: 18px;
  line-height: 22px;
  font-weight: 600;
  margin-top: 0;
  color: settings.$color-emphasis
}

.article-status__text {
  @include typography.body-small;
  font-size: 12px;
  font-weight: 600;
  line-height: 22px;
}

.article-actions {
  padding-top: 36px;
}

.article-actions__button {
  @include buttons.action-button();
  margin-bottom: 12px;
  margin-right: 6px;
  display: inline-block;

  &:nth-child(even) {
    margin-right: 0;
  }
}

.article-actions__button_icon{
  @include buttons.button-icon();
}

.review-timeline {
  @include _right-column-section();
}

.review-timeline__list {
  list-style: none;
  padding-left: 0;
}

.review-timeline__list_item {
  display: flex;
  justify-content: space-between;
  margin-bottom: 8px;
}

.review-timeline__event {
  @include typography.right-bar-text();
  font-weight: 600;
}

.review-timeline__date {
  @include typography.right-bar-text();
  color: settings.$color-text-inactive;
}

.review-timeline__reviews_link {
  @include typography.link-text();
}

.link-icon {
  vertical-align: bottom;
}

.article-metadata {
  @include _right-column-section();
}

.article-metrics {
  list-style: none;
  padding-left: 0;
  margin-bottom: 0;
}

.article-metrics__item {
  @include typography.right-bar-text();
  color: settings.$color-text-inactive;
  display: inline;

  &::after {
    content: ", ";
  }

  &:last-child::after {
    content: "";
  }
}

.article-subject-areas {
  list-style: none;
  padding-left: 0;
  padding-top: 36px;
  margin-top: 0;
  display: flex;
  flex-wrap: wrap;
}

.article-subject-areas__item {
  @include buttons.subject-area-button();
  margin-right: 12px;
  margin-bottom: 12px;

  &:last-child {
    margin-right: 0;
  }
}

.article-metadata__similar_research_link {
  @include typography.link-text();
}

